--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,7 +5,7 @@ Author URL: http://w3layouts.com
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>My Website a Personal Portfolio Category Bootstrap Responsive Website Template | About :: W3layouts</title>
+    <title>My Website a Personal Portfolio</title>
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css?family=Nunito:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Hind&display=swap" rel="stylesheet">
@@ -22,7 +18,7 @@ Author URL: http://w3layouts.com
 <section class="w3l-bootstrap-header">
   <nav class="navbar navbar-expand-lg navbar-light py-lg-3 py-2">
     <div class="container">
-      <a class="navbar-brand" href="{{url_for('home')}}"> My Website</a>
+      <a class="navbar-brand" href="{{url_for('home')}}"> {{title}}</a>
       
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,12 +61,27 @@ Author URL: http://w3layouts.com
 					<a href="#"><img src="{{url_for('static', filename='/images/22.jpg')}}" class="img-fluid" alt="content-photo"></a>
 				</div>
 				<div class="col-lg-7 content-left mt-lg-0 mt-5 pl-lg-5">
-					<h3>Failure Is The Condiment That Gives Sucess  It'S Flavour</h3>
-					<p class="mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet non porro laboriosam rerum fugiat quod ullam earum
-						dignissimos corporis, nemo provident nostrum, nihil culpa. Et corrupti sit hic amet, animi unde cumque consequuntur omnis ad nihil optio
-						id eum qui, impedit deleniti? Veniam eum aspernatur incidunt? Doloremque, cum? Repellendus consectetur, cupiditate tenetur provident
-						neque, quas, totam eveniet nisi eius veritatis ea maiores ducimus a reprehenderit minima magnam dicta! Aliquam libero voluptatum facilis
-						dolorum architecto? Doloribus fuga voluptate voluptatem corporis rem! Culpa nam et accusamus beatae!</p>
+					<h3>Hello again!</h3>
+					<p class="mb-0">
+            Everything you need to know about me is in the home page of this website so i will try to be short about myself here.
+            My name is Shubham Thorat i'm a computer science pass out also i like to say i am a programmer. currently living in Maharashtra, india.
+            i am in the search of career opportunities that will help me grow professionally.
+
+          </p>
+          <p class="mb-0">
+            I have always been into anything involving coding eversince i was in high scool and signed up on facebook for the first time and got curious about how things work in computer.
+             so i took up computer science and engineering. started coding in one after another languages 
+             like HTML,c,c++, core java and advanced java,php,c#,shell script etc.
+             I got interested in different technologies that were introduced to me as a student.
+          </p>
+
+          <p class="mb-0">
+            When I'm not coding or learning, I spend my time reading, 
+            playing cricket, hiking or 
+            random road trips. I also love  
+            the watching movies and netflix series, listen to music, singing, 
+            and l'in trying to be a badass guitar player.
+          </p>
 					<a href="#" class="btn-theme2 btn mt-lg-5 mt-4">About Me</a>
 				</div>
 			</div>
@@ -79,6 +90,7 @@ Author URL: http://w3layouts.com
 </div>
 <!-- //w3l-content-photo-5 -->
 <!-- home page service grids -->
+<!--
 <section id="services-1" class="bg-light py-5">
   <div class="container py-lg-3">
     <div class="heading text-center mx-auto">
@@ -153,6 +165,7 @@ Author URL: http://w3layouts.com
           <a href="https://twitter.com/CuriousShub" class="twitter"><span class="fa fa-twitter"></span></a>
           <a href="https://www.instagram.com/_shub_thorat_/" class="instagram"><span class="fa fa-instagram"></span></a>
           <a href="https://www.linkedin.com/in/shubham-thorat-3900111b6/" class="linkedin"><span class="fa fa-linkedin"></span></a>
+          <a href="https://github.com/net-wizard" class="github"><span class="fa fa-github"></span></a>
       </div>
           <div class="bottom-copies text-center">
             <p class="copy-footer-29">© 2021 My Website. All rights reserved | Designed by Shubham thorat</p>
