--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -19,7 +18,7 @@
 <section class="w3l-bootstrap-header">
   <nav class="navbar navbar-expand-lg navbar-light py-lg-3 py-2">
     <div class="container">
-      <a class="navbar-brand" href="{{url_for('home')}}"> My Website</a>
+      <a class="navbar-brand" href="{{url_for('home')}}"> {{title}}</a>
    
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +47,7 @@
 <section class="w3l-contact-breadcrum">
   <div class="breadcrum-bg">
     <div class="container py-5">
-      <p><a href="index.html">Home</a> &nbsp; / &nbsp; Contact</p>
+      <p><a href="{{url_for('home')}}">Home</a> &nbsp; / &nbsp; Contact</p>
      </div>
   </div>
 </section>
@@ -145,6 +144,7 @@
           <a href="https://twitter.com/CuriousShub" class="twitter"><span class="fa fa-twitter"></span></a>
           <a href="https://www.instagram.com/_shub_thorat_/" class="instagram"><span class="fa fa-instagram"></span></a>
           <a href="https://www.linkedin.com/in/shubham-thorat-3900111b6/" class="linkedin"><span class="fa fa-linkedin"></span></a>
+          <a href="https://github.com/net-wizard" class="github"><span class="fa fa-github"></span></a>
       </div>
           <div class="bottom-copies text-center">
             <p class="copy-footer-29">© 2021 My Website. All rights reserved | Designed by Shubham thorat</p>
